# Data-viz-challenge-2024

./: README.md  colors.md  pyproject.toml  requirements.txt
app/dash/: app.py
app/streamlit/: app.py
data/1_raw/: education_attainment.csv  literacy_rates.csv  youth_not_in_education_employment_or_training.csv
data/2_clean/: education_attainment.parquet  literacy_rates.parquet  youth_not_in_education_employment_or_training.parquet
data/3_product/: alphabetisation.parquet  alphabetisation_diff.parquet  education_attainment.parquet  education_attainment_ratio.parquet  unemployed.parquet  unemployed_by_country.parquet
data/shapes/2_clean/: pacific_eez.geojson  pacific_eez_save.geojson
dataviz_app/: app.py  id.py
dataviz_app/assets/: arrow.css  dashAgGridComponentFunctions.js  menu.css  separator.css  styles.css  titles.css
dataviz_app/component/: agrid.py  arrow.py  chart.py  chart_educ.py  country_charts.py  menu.py  no_data.py  overall_view.py  pacific_map.py  pie_unemploy.py  separator_wave.py
dataviz_app/component/charts/: __init__.py  bar.py  empty.py  indicators.py  pie.py
notebooks/1_cleaning/: education_attainment copy.ipynb  education_attainment.ipynb  literacy_rates.ipynb  youth_not_in_education_employment_or_training.ipynb
notebooks/2_exploratory/: educ_attainment.ipynb  literacy.ipynb  unemployed.ipynb  youth_educ.ipynb
notebooks/2_production/: educ_attainment.ipynb  literacy.ipynb
notebooks/shapes/: all_ezz.ipynb  view.ipynb
notebooks/test/: test_choropleth.ipynb  test_dash_leaflet.ipynb  test_geopandas_pacific.ipynb
