[tool.poetry]
name = "dataviz_app"
version = "0.1.0"
description = ""
authors = ["Jules Lehodey <juleslehodey31320@hotmail.fr>"]
readme = "README.md"
packages = [{ include = "dataviz_app" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scipy = "^1.13.0"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
dash = "^2.17.0"
geopandas = "^0.14.4"
folium = "^0.16.0"
mapclassify = "^2.6.1"
dash-bootstrap-components = "^1.6.0"
dash-leaflet = "^1.0.15"
dash-dangerously-set-inner-html = "^0.0.2"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
